# cuthulhu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/desktop/: Cargo.toml  MANUAL-CHECKLIST.md  build.rs  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/src/: device.rs  ipc.rs  lib.rs  main.rs  state.rs
apps/desktop/ui/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/desktop/ui/e2e/: smoke.spec.ts
apps/desktop/ui/src/: App.tsx  ipc.ts  main.tsx  tokens.css
apps/desktop/ui/src/cut/: CutDialog.tsx  CutPreview.test.ts  CutPreview.tsx  viewmodel.test.ts  viewmodel.ts
apps/desktop/ui/src/interaction/: transform.test.ts  transform.ts
apps/desktop/ui/src/panels/: LayersPanel.tsx  NumberField.test.ts  NumberField.tsx  PropertiesPanel.tsx  StatusBar.tsx  ToolRail.tsx  TopBar.tsx
apps/desktop/ui/src/render/: Canvas2DRenderer.ts  Renderer.ts  hittest.test.ts  hittest.ts  pathdata.test.ts  pathdata.ts
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  pipeline.rs
crates/cli/tests/: dry_run.rs
crates/cutplan/: Cargo.toml
crates/cutplan/src/: lib.rs  passes.rs  preflight.rs  presets.rs
crates/document/: Cargo.toml
crates/driver-core/: Cargo.toml
crates/driver-hpgl/: Cargo.toml
crates/driver-silhouette/: Cargo.toml
crates/fileio/: Cargo.toml
crates/geometry/: Cargo.toml
docs/protocol/: README.md  capture-procedure.md  gcc-hpgl.md  silhouette-cameo5.md
docs/roadmap/: supported-machines.md
tools/capture/: decode.py  test_decode.py
(+41 files in other folders)
