[package]
name = "desktop"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "desktop"
path = "src/lib.rs"

[[bin]]
name = "desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = "2"

[dependencies]
geometry = { path = "../../crates/geometry" }
document = { path = "../../crates/document" }
fileio = { path = "../../crates/fileio" }
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
