[package]
name = "cutplan"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
document = { path = "../document" }
driver-core = { path = "../driver-core" }
geometry = { path = "../geometry" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
dirs = "5"

[dev-dependencies]
fontdb = "0.22"
